# tree-sitter-dafny

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dafny/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm  locals.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  scanner.c
test/: parse-suite.js
